JSLintMate
==========

* FEATURE: Added basic TextMate 2 support.
* FEATURE: Added support for JSON options files, not just YAML.
* FEATURE: Added a problem list preview to the tooltip that appears when saving
  JS files.
* IMPROVEMENT: In the problem list, made the hover state more subtle (to better
  bring attention to the blue "current" state), and added an active state.
* IMPROVEMENT: Changed *up* key behavior to better mimic the standard OS X
  behavior for keyboard navigation in menus, the Finder, etc.
* IMPROVEMENT: Added *escape* as keyboard shortcut for unhighlighting the
  current item in the problem list.
* FIX: Fixed version notification to not cache the last result. This allows a
  freshly updated copy of the bundle to know that it matches the latest reported
  version.


1.2 (2011-12-17)
----------------
* FEATURE: Added a tooltip that appears whenever you save a JS file that has
  problems.
* FEATURE: Added bundle preferences -- a much simpler and more robust way to
  customize JSLintMate behavior. Use these instead of modifying the bundle
  commands themselves.
* FEATURE: Added support for detecting unused variables.
* FEATURE: Added notification when a new version of JSLintMate is available.
* IMPROVEMENT: Upgraded to JSLint 2011-11-03 and JSHint 2011-09-29.
* FIX: Fixed `predef` option support for listing known globals.
* FIX: Fixed falling back to built-in jslint.js/jshint.js if custom
  `--linter-file` can't be read.
* FIX: Fixed reading a config file from a non-absolute path, e.g.,
  `~/.jslintrc`.


1.1 (2011-06-02)
----------------
* FEATURE: Added keyboard navigation. Use up/down arrows (or k/j) to select an
  error, then hit enter to show it in the JS file.
* FEATURE: Added support for the `--linter-file` option when customizing
  bundle commands. Allows for using your own custom/edge build of
  JSLint/JSHint.
* IMPROVEMENT: Improved rendering performance of the striped red "xx% scanned"
  error when it appears at the bottom of the window.
